Модуль 2. ООП Задание 4. Интерфейсы

--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,6 @@ include 'core',
         'oop',
         'strings',
         'io',
-        'exceptions'
-rootProject.name = 'epamJF'
+        'exceptions',
+        'collections'
 
